Add native type support with Scala and Kotlin DSL wrappers (#167)
* cleanup

* remove outdated files

* Add ExternalTools infrastructure and expand sqlglot integration

Added new ExternalTools infrastructure for managing Python/sqlglot:
- New external/ package with Python, Sqlglot, OsArch, TypoCoursier, ExternalTools
- Expanded sqlglot_analyze.py significantly (~60% growth, 25KB to 40KB)
- Added coursier dependency for managing external tools

Integration changes:
- Generation scripts now initialize and pass ExternalTools to MetaDb and SqlFileReader
- readSqlFileDirectories no longer needs externalTools parameter (uses JdbcMetadata directly)
- MariaDB path still requires externalTools for sqlglot-based analysis

View generation changes:
- Many nullability changes in generated view code
- Type inference improvements for complex expressions

This commit expands sqlglot usage and adds tooling infrastructure,
enabling better type analysis for views and MariaDB while keeping
PostgreSQL SQL files using direct JDBC metadata.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* Add native type support with Scala and Kotlin DSL wrappers

This commit introduces comprehensive native type support for Scala and
Kotlin, enabling idiomatic language features while maintaining a shared
Java runtime.

- Unboxed primitive array types for zero-boxing performance:
  * boolean[], short[], int[], long[], float[], double[]
  * Direct primitive array encoding/decoding without boxing overhead
  * Comprehensive PgJson/PgText/PgRead/PgWrite implementations
- Language-specific type mappings throughout code generator
- Scala BigDecimal ↔ java.math.BigDecimal conversion support

Complete wrapper layers for Kotlin and Scala over Java runtime:
- **Kotlin DSL** (typo-dsl-kotlin/): 17+ wrapper classes
  * Native Optional, Iterable, Iterator support
  * Kotlin-friendly naming and idioms
  * Extension functions for ergonomic API
-